# skill-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  demo.sh
examples/sample_tool/: pyproject.toml
examples/sample_tool/sample_tool/: __init__.py  cli.py
skill_forge/: __init__.py  cli.py  config.py  describe.py  errors.py  frontmatter.py  generate.py  llm.py  models.py  skill.py  slug.py  templates.py  validate.py
skill_forge/analyzers/: __init__.py  base.py  cli_help.py  docs.py  generic.py  node.py  python.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_forge.py  test_llm.py  test_review_regressions.py  test_units.py
